--- a/Alpha6/package.json
+++ b/Alpha6/package.json
@@ -30,6 +30,7 @@
     "react-native-maps": "^1.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-open-maps": "^0.4.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-text-input-mask": "^3.2.0"
   },
   "devDependencies": {
