--- a/Alpha6/package.json
+++ b/Alpha6/package.json
@@ -24,6 +24,7 @@
     "expo-navigation-bar": "^3.0.4",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
+    "normalize-text": "^2.5.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dropdown-picker": "^5.4.6",
