--- a/Alpha7/package.json
+++ b/Alpha7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpha3",
+  "name": "ecoreturn",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -33,7 +33,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-open-maps": "^0.4.3",
     "react-native-picker-select": "^9.1.3",
-    "react-native-text-input-mask": "^3.2.0"
+    "react-native-text-input-mask": "^3.2.0",
+    "expo-dev-client": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
